# Trialfield

./: .gitignore  .rsyncignore  2026 FSA acre  and Crop insurance.xlsx  AUDIT.md  Archive of 2023 Seed inventory.xlsx  BUDGET_AUDIT.md  CLAUDE.md  Caddyfile  DEPLOY.md  GLOMALIN_AUDIT.md  HANDOFF.md  Hughes Farm acres 2026.xlsx  Makefile  Meristem Malt Budget.csv  OVERNIGHT_LOG.md  PARKING_LOT.md  Procfile  README.md  ROLLUP_DATA_AUDIT.md  Randy's 2025 Grain Ticket Entry.xlsx  SECURITY-AUDIT-BRIEF-EXTERNAL.md  SECURITY-AUDIT-BRIEF.md  SOP-FSA578-Insurance-Claims.md  TOKENS.md  Test Batch Budget for Meristem Malt.xlsx  ecosystem.config.js  hello.txt  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.json
.planning/: DOMAIN-CONTEXT.md  FIELD-MAP-VISION.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v10.0-MILESTONE-AUDIT.md  v11.0-MILESTONE-AUDIT.md  v12.0-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md  v5.0-VISION.md  v6.0-MILESTONE-AUDIT.md  v7.0-MILESTONE-AUDIT.md  v9.0-VISION.md
Field Histories/: ORG AVALON ROAD.xlsx  ORG FLETCHER CRIBBIN.xls.xlsx  ORG GLEN ERIN.xlsx  ORG GOAT PASTURE.xlsx  ORG JONES.xls.xlsx  ORG KOPP EAST & WEST.xlsx  ORG OM1 & OM2.xls.xlsx  ORG OMNI.xlsx  ORG SIMPSON.xls.xlsx  ORG TURKEY DEER.xls.xlsx  ORG YOSS.xlsx
Glomalin/: Copy of  PLANTPOPBEAN24.xlsx  Copy of Conventional Crop Rotation Sheet.xlsx  Copy of Organic Crop Rotation Sheet.xlsx  ORGANIC INPUT MIX RATIOS.xlsx
docs/: SOP-Staff-Onboarding.md
farm-budget/: .env.example  .gitignore  (+8 more)
(+1367 files in other folders)
